# Outreach-Email-Platform

./: .gitignore  pyproject.toml  readme.md  recipients.json
outreach_app/: __init__.py  cli.py  db.py  mailer.py  rendering.py  store.py  web.py
outreach_app/static/: styles.css
outreach_app/templates/: base.html  campaign.html  gmail.html  history.html  index.html  new_campaign.html  preview.html  smtp.html
